tdf#81437 OOXML Import: default border style for chartarea

Set the default border style for chartspace, because the
MS-Office "automatic" border property was ignored
and the chartarea always appeared without a border.

Change-Id: I579f3745d5fcb2a36e1b4d519320631d20e60fd4