oox/source/helper/graphichelper.cxx
@@ -165,6 +165,18 @@ sal_Int32 GraphicHelper::getDefaultChartAreaFillStyle() const
     return XML_solidFill;
 }
 
+sal_Int32 GraphicHelper::getDefaultChartAreaLineStyle() const
+{
+    return XML_solidFill;
+}
+
+sal_Int16 GraphicHelper::getDefaultChartAreaLineWidth() const
+{
+    // 9525 is near 0.75 pt in English Metric Unit
+    // this value is what MSO 2016 writes saving incomplate MSO 2010 documents
+    return 9525;
+}
+
 // Device info and device dependent unit conversion ---------------------------
 
 sal_Int32 GraphicHelper::convertScreenPixelXToHmm( double fPixelX ) const
